<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/radiogroup_questionary_answer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/questionary_answer_box"
    android:paddingBottom="8dp"
    android:paddingEnd="8dp"
    android:paddingLeft="12dp"
    android:paddingRight="8dp"
    android:paddingStart="12dp"
    android:paddingTop="8dp">

    <software.cneuro.neurogertheme.RadioButtonFont
        android:id="@+id/radio_answer_1"
        style="@style/RadioButtonQuestionnaireAnswerStyle"
        android:layout_width="match_parent"
        android:text="@string/questionary_answer_1"
        app:myFont="Roboto-Thin_3.ttf" />

    <software.cneuro.neurogertheme.RadioButtonFont
        android:id="@+id/radio_answer_2"
        style="@style/RadioButtonQuestionnaireAnswerStyle"
        android:layout_width="match_parent"
        android:text="@string/questionary_answer_2"
        app:myFont="Roboto-Thin_3.ttf" />

    <software.cneuro.neurogertheme.RadioButtonFont
        android:id="@+id/radio_answer_3"
        style="@style/RadioButtonQuestionnaireAnswerStyle"
        android:layout_width="match_parent"
        android:text="@string/questionary_answer_3"
        app:myFont="Roboto-Thin_3.ttf" />

    <software.cneuro.neurogertheme.RadioButtonFont
        android:id="@+id/radio_answer_4"
        style="@style/RadioButtonQuestionnaireAnswerStyle"
        android:layout_width="match_parent"
        android:text="@string/questionary_answer_4"
        app:myFont="Roboto-Thin_3.ttf" />

    <software.cneuro.neurogertheme.RadioButtonFont
        android:id="@+id/radio_answer_5"
        style="@style/RadioButtonQuestionnaireAnswerStyle"
        android:layout_width="match_parent"
        android:text="@string/questionary_answer_5"
        app:myFont="Roboto-Thin_3.ttf" />

</RadioGroup>