<?xml version="1.0" encoding="utf-8"?>
<androidx.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin"
            android:layout_marginTop="@dimen/fragment_margin"
            android:layout_marginRight="@dimen/fragment_margin"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/fragment_margin_14">

                <software.cneuro.neurogertheme.TextViewFont
                    style="@style/SubjectCardTitleWhiteTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:gravity="center_vertical"
                    android:padding="@dimen/fragment_margin"
                    android:text="@string/comorbidities"
                    app:myFont="Roboto-Thin_3.ttf" />

                <LinearLayout
                    android:id="@+id/detail_card_container_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </androidx.v7.widget.CardView>

        <androidx.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fragment_margin"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/card_background"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <software.cneuro.neurogertheme.TextViewFont
                    style="@style/SubjectCardTitleWhiteTextStyle.CustomPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary"
                    android:gravity="center_vertical"
                    android:text="@string/card_label_medication_quantity"
                    app:myFont="Roboto-Thin_3.ttf" />

                <software.cneuro.neurogertheme.CheckBoxFont
                    android:id="@+id/cbx_medication_quantity"
                    style="@style/CheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_control_height"
                    android:layout_marginStart="@dimen/fragment_margin_14"
                    android:layout_marginLeft="@dimen/fragment_margin_14"
                    android:layout_marginTop="@dimen/fragment_margin_14"
                    android:layout_marginEnd="@dimen/fragment_margin_14"
                    android:layout_marginRight="@dimen/fragment_margin_14"
                    android:text="@string/takes_more_than_5_medicine"
                    app:myFont="Roboto-Light_3.ttf" />

                <software.cneuro.neurogertheme.TextViewFont
                    style="@style/SubjectCardTitleBlackTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/fragment_margin"
                    android:text="@string/medication_quantity_specification"
                    app:myFont="Roboto-Thin_3.ttf" />
            </LinearLayout>
        </androidx.v7.widget.CardView>

        <include layout="@layout/action_btn_container" />
    </LinearLayout>
</androidx.v4.widget.NestedScrollView>
